// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders menu when it was clicked 1`] = `
<div>
  <header>
    <nav
      class="navbar navbar-expand-md navbar-dark bg-dark fixed-top"
    >
      <span
        class="navbar-brand"
      >
        Customer App
      </span>
      <button
        aria-controls="responsive-navbar-nav"
        aria-label="Toggle navigation"
        class="navbar-toggler collapsed"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="navbar-collapse collapse"
        id="responsive-navbar-nav"
      >
        <div
          class="mr-auto navbar-nav"
        >
          <div
            class="show dropdown nav-item"
          >
            <a
              aria-expanded="true"
              aria-haspopup="true"
              class="dropdown-toggle nav-link"
              href="#"
              id="collasible-nav-dropdown"
              role="button"
            >
              Kunden
            </a>
            <div
              aria-labelledby="collasible-nav-dropdown"
              class="dropdown-menu show"
              style="margin: 0px;"
            >
              <a
                class="dropdown-item"
                href="#"
                role="button"
              >
                Liste
              </a>
              <a
                class="dropdown-item"
                href="#"
                role="button"
              >
                Hinzufügen
              </a>
            </div>
          </div>
        </div>
        <div
          class="navbar-nav"
        />
      </div>
    </nav>
  </header>
</div>
`;

exports[`Header renders offline badge if connection is broken 1`] = `
<div>
  <header>
    <nav
      class="navbar navbar-expand-md navbar-dark bg-dark fixed-top"
    >
      <span
        class="navbar-brand"
      >
        Customer App
      </span>
      <button
        aria-controls="responsive-navbar-nav"
        aria-label="Toggle navigation"
        class="navbar-toggler collapsed"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="navbar-collapse collapse"
        id="responsive-navbar-nav"
      >
        <div
          class="mr-auto navbar-nav"
        >
          <div
            class="dropdown nav-item"
          >
            <a
              aria-expanded="false"
              aria-haspopup="true"
              class="dropdown-toggle nav-link"
              href="#"
              id="collasible-nav-dropdown"
              role="button"
            >
              Kunden
            </a>
          </div>
        </div>
        <div
          class="navbar-nav"
        >
          <span
            class="justify-content-end navbar-text"
          >
            <span
              class="badge badge-warning"
            >
              Offline
            </span>
          </span>
        </div>
      </div>
    </nav>
  </header>
</div>
`;

exports[`Header renders without errors 1`] = `
<div>
  <header>
    <nav
      class="navbar navbar-expand-md navbar-dark bg-dark fixed-top"
    >
      <span
        class="navbar-brand"
      >
        Customer App
      </span>
      <button
        aria-controls="responsive-navbar-nav"
        aria-label="Toggle navigation"
        class="navbar-toggler collapsed"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="navbar-collapse collapse"
        id="responsive-navbar-nav"
      >
        <div
          class="mr-auto navbar-nav"
        >
          <div
            class="dropdown nav-item"
          >
            <a
              aria-expanded="false"
              aria-haspopup="true"
              class="dropdown-toggle nav-link"
              href="#"
              id="collasible-nav-dropdown"
              role="button"
            >
              Kunden
            </a>
          </div>
        </div>
        <div
          class="navbar-nav"
        />
      </div>
    </nav>
  </header>
</div>
`;
